Login, run, logout firegit add .!

--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -20,7 +20,7 @@
            </div>
          </md-input-container>
          <div layout="row" layout-align="center center">
-           <md-button type="submit" class="md-raised md-primary" ng-click="$ctrl.sendCredentials()">Login</md-button>
+           <md-button  class="md-raised md-primary" ng-click="$ctrl.sendCredentials()">Login</md-button>
            <div flex="flex"></div>
            <md-button href="" md-no-ink>Forgot Password</md-button>
          </div>
